tests/run/error_scope_exit.out
tests/run/error_scope_exit.ig:6:12: error: undefined variable
